# llmvcr

./: .gitignore  README.md  README.ml  pyproject.toml  requirements.txt
src/llmvcr/: __init__.py  _patch.py  cassette.py  cli.py  context.py  errors.py  matching.py  recorder.py  storage.py
src/llmvcr/providers/: anthropic_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
tests/: test_cassettes.py  test_matching.py  test_new_providers.py  test_recorder.py  test_storage.py
tests/cassettes/: sample_anthropic.yaml  sample_gemini.yaml  sample_groq.yaml  sample_ollama.yaml  sample_openai.yaml
